force-app/main/default/objects/DocGen_Asset__c/DocGen_Asset__c.object-meta.xml
<CustomObject>
    <description
    >Stores shared, org-wide document assets (images in v1) that templates reference by a stable merge tag ({%asset:&lt;key&gt;}); the tag resolves at generation time to the asset's latest ContentVersion.</description>
    <label>Portwood Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portwood Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>