force-app/main/default/objects/DocGen_Asset__c/fields/Asset_Key__c.field-meta.xml
<CustomField>
    <fullName>Asset_Key__c</fullName>
    <description
    >Immutable, URL-safe system key referenced by the {%asset:&lt;key&gt;} merge tag. Auto-generated on insert when left blank (DocGenAssetKeyTrigger); never change it once set or existing templates stop resolving.</description>
    <externalId>true</externalId>
    <label>Asset Key</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>