force-app/main/default/objects/DocGen_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description
    >Kind of shared asset. Only Image is supported in v1; the picklist is left open so text/HTML snippet types can be added later without a schema change.</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
                <default>true</default>
                <label>Image</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>