force-app/main/default/objects/DocGen_Asset__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
    >Free-text grouping label for the Assets tab (e.g. "Logos", "Footers", "Backgrounds"). Filterable in the admin UI; no effect on merge-tag resolution. Free text rather than a picklist so subscribers can invent their own taxonomy and the managed package never has to ship picklist-value changes.</description>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>