force-app/main/default/objects/DocGen_Asset__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >When false the asset is retired: the resolver skips it (renders a placeholder + logs an error) instead of resolving its merge tag. Powers deactivate without deleting history.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>